<resources>
    <string name="app_name">Exo_03_RecyclerView</string>
    <string name="title_main_add">Ajouter un aliment</string>
    <string name="hint_food_name">Nom de l\'aliment</string>
    <string name="hint_calory">Calorie (pour 100 gr)</string>
    <string name="btn_add">Ajouter</string>
    <string name="title_main_list">Liste des aliments</string>
    <string name="choice_category_vegetable">Légume</string>
    <string name="choice_category_meat">Viande</string>
    <string name="choice_category_fruit">Fruit</string>
</resources>