<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_main_add"
        android:textSize="25sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_main_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_food_name"
        android:inputType="text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_main_food_calory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/hint_calory"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            />
            <!-- ime : Input method editor -->

        <View
            android:layout_width="@dimen/default_margin"
            android:layout_height="0dp"
            />

        <Spinner
            android:id="@+id/sp_main_food_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:spinnerMode="dropdown"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_main_add_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_add"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_main_list"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginVertical="@dimen/default_margin"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main_foods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        />

</LinearLayout>